# chip-8-emulator

./: CMakeLists.txt  Makefile  README.md  main.c
src/: memory.c  memory.h  setup.c  setup.h  utils.c  utils.h
src/components/: cpu.c  cpu.h  display.c  display.h  keypad.c  keypad.h  memory.c  memory.h  stack.c  stack.h  timer.c  timer.h
src/sdl/: renderer.c  renderer.h  sdl_wrapper.c  sdl_wrapper.h
src/utils/: sdl_wrapper.c  sdl_wrapper.h  setup.c  utils.c  utils.h
